# oxdeai-core

./: .gitignore  CONTRIBUTING.md  PROTOCOL.md  README.md  RELEASE.md  ROADMAP.md  SPEC.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: ci.yml
bench/: README.md  config.ts  fixtures.ts  generate-graphs.ts  index.ts  metrics.ts  package.json  reporter.ts  runner-core.ts  runner.ts
bench/cases/: baselinePath.ts  evaluate.ts  protectedPath.ts  verifyAuthorization.ts  verifyEnvelope.ts
docs/: adapter-contract.md  adapter-reference-architecture.md  conformance-vectors.md  invariants.md  multi-language.md  pep-production-guide.md  release-checklist.md
docs/adapters/: adapter-verification.md
docs/architecture/: why-oxdeai.md
docs/cases/: README.md  api-cost-containment.md  infrastructure-provisioning-control.md
docs/demos/: golden-scenario.md
docs/design/: delegated-authorization.md
docs/diagrams/: README.md  adapter-sidecar-architecture.excalidraw  agent-authorization-boundary.excalidraw  pdp-pep-flow.excalidraw  verification-envelope-flow.excalidraw
docs/integrations/: README.md  adapter-validation.md  adoption-checklist.md  autogen.md  crewai.md  langgraph.md  openai-agents-sdk.md  openai-tools.md  openclaw.md  (+1 more)
examples/: README.md
examples/rust-verifier/: Cargo.toml  README.md
examples/rust-verifier/src/: canonical.rs  keyset.rs  lib.rs  main.rs  types.rs  verify_authorization.rs
protocol/: envelope.md  protocol.md  spec.md  threat-model.md
scripts/: demo-cross-adapter.sh  make-demo-cross-adapter.sh  validate-adapters.mjs
(+38 files in other folders)
