[package]
name = "oxdeai-rust-verifier"
version = "0.1.0"
edition = "2021"
description = "Reference-only Rust verifier skeleton for OxDeAI AuthorizationV1"
license = "Apache-2.0"
publish = false

[dependencies]
base64 = "0.22"
ed25519-dalek = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
